Fix discord logo & overflow css

--- a/src/css/homepage.css
+++ b/src/css/homepage.css
@@ -1,10 +1,3 @@
-body, html {
-    margin: 0;
-    padding: 0;
-    overflow: hidden;
-    height: 100%;
-}
-
 .main {
     position: relative;
     height: 80vh;
@@ -12,6 +5,7 @@ body, html {
     display: flex;
     justify-content: center;
     align-items: center;
+    overflow: hidden;
     z-index: 1;
     background-color: black;
 }
